--- a/hamoodView.html
+++ b/hamoodView.html
@@ -56,6 +56,9 @@
                 stroke-dasharray="32.4" stroke-dashoffset="32.4" />
         </g>
     </svg>
+    <div id="hamoodShake"
+        style="display:none;position:absolute;bottom:10vh;left: 50%; transform: translate(-50%,0); background-color:rgba(0, 255, 0, 0.4);border-radius: 15px;transition: all 0.1s;">
+    </div>
     <H4 id="hamoodText"
         style="position:absolute;bottom:10vh;white-space: nowrap;left: 50%; transform: translate(-50%,0); background-color:rgba(0,0,0,0.4);color:white;border-radius: 15px;padding:2vh;">
     </H4>
